alignment fix 2

--- a/css/main.css
+++ b/css/main.css
@@ -668,8 +668,11 @@ select,
     padding: .3em 1em;
 }
 
-.adv-input-filters input,
-.action-btn{
+.adv-input-filters input {
+    padding-bottom: .4em;
+}
+
+.action-btn {
     padding-bottom: .5em;
 }
 
